// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Badge accepts custom style 1`] = `
<div>
  <span
    class="badge badge-medium my-badge-class"
    data-testid="test-badge"
    style="color: rgb(0, 0, 0);"
  >
    8
  </span>
</div>
`;

exports[`Badge Badge is active 1`] = `
<div>
  <span
    class="badge badge-medium my-badge-class active"
    data-testid="test-badge"
  >
    8
  </span>
</div>
`;

exports[`Badge Badge is disruptive 1`] = `
<div>
  <span
    class="badge disruptive badge-medium my-badge-class"
    data-testid="test-badge"
  >
    8
  </span>
</div>
`;

exports[`Badge Badge is large 1`] = `
<div>
  <span
    class="badge badge-large my-badge-class"
    data-testid="test-badge"
  >
    8
  </span>
</div>
`;

exports[`Badge Badge is medium 1`] = `
<div>
  <span
    class="badge badge-medium my-badge-class"
    data-testid="test-badge"
  >
    8
  </span>
</div>
`;

exports[`Badge Badge is small 1`] = `
<div>
  <span
    class="badge badge-small my-badge-class"
    data-testid="test-badge"
  >
    8
  </span>
</div>
`;

exports[`Badge Renders without crashing 1`] = `
<div>
  <span
    class="badge badge-medium my-badge-class"
    data-testid="test-badge"
  >
    8
  </span>
</div>
`;
